--- a/bicicletas/magic.html
+++ b/bicicletas/magic.html
@@ -146,8 +146,8 @@
             <li>Rio Grande do Sul</li>
           </ul>
           <div class="footer-redes">
-            <a href="https://www.instagram.com/evertonribeiro_00/">
-              <img src="../img/redes/instagram.svg" alt="instagram" />
+            <a href="https://www.linkedin.com/in/evertonsantos-dev/" target="_blank">
+              <img src="../img/redes/icon-linkedin.svg" alt="linkedin" />
             </a>
           </div>
         </div>
@@ -155,10 +155,10 @@
           <h3 class="font-2-l-b cor-0">informações</h3>
           <nav>
             <ul class="font-1-m cor-5">
-              <li><a href="../bicicletas.html">Bicicletas</a></li>
-              <li><a href="../seguros.html">Seguros</a></li>
-              <li><a href="../contato.html">Contato</a></li>
-              <li><a href="../termos.html">Termos e Condições</a></li>
+              <li style="margin-bottom: 16px;"><a href="./bicicletas.html">Bicicletas</a></li>
+              <li style="margin-bottom: 16px;"><a href="./seguros.html">Seguros</a></li>
+              <li style="margin-bottom: 16px;"><a href="./contato.html">Contato</a></li>
+              <li style="margin-bottom: 16px;"><a href="./termos.html">Termos e Condições</a></li>
             </ul>
           </nav>
         </div>
