--- a/index.html
+++ b/index.html
@@ -341,18 +341,17 @@
           <h3 class="font-2-l-b cor-0">Informações</h3>
           <nav>
             <ul class="font-1-m cor-5">
-              <li><a href="./bicicletas.html">Bicicletas</a></li>
-              <li><a href="./seguros.html">Seguros</a></li>
-              <li><a href="./contato.html">Contato</a></li>
-              <li><a href="./termos.html">Termos e Condições</a></li>
+              <li style="margin-bottom: 16px;"><a href="./bicicletas.html">Bicicletas</a></li>
+              <li style="margin-bottom: 16px;"><a href="./seguros.html">Seguros</a></li>
+              <li style="margin-bottom: 16px;"><a href="./contato.html">Contato</a></li>
+              <li style="margin-bottom: 16px;"><a href="./termos.html">Termos e Condições</a></li>
             </ul>
           </nav>
         </div>
         <p class="footer-copy font-2-m cor-6">Bikcraft © Alguns direitos reservados.</p>
       </div>
     </footer>
-
-    <script src="./js/plugins/simple-anime.js"></script>;
+    <script src="./js/plugins/simple-anime.js"></script>
     <script src="./js/script.js"></script>
   </body>
 </html>
