--- a/seguros.html
+++ b/seguros.html
@@ -289,10 +289,10 @@
           <h3 class="font-2-l-b cor-0">informações</h3>
           <nav>
             <ul class="font-1-m cor-5">
-              <li><a href="./bicicletas.html">Bicicletas</a></li>
-              <li><a href="./seguros.html">Seguros</a></li>
-              <li><a href="./contato.html">Contato</a></li>
-              <li><a href="./termos.html">Termos e Condições</a></li>
+              <li style="margin-bottom: 16px;"><a href="./bicicletas.html">Bicicletas</a></li>
+              <li style="margin-bottom: 16px;"><a href="./seguros.html">Seguros</a></li>
+              <li style="margin-bottom: 16px;"><a href="./contato.html">Contato</a></li>
+              <li style="margin-bottom: 16px;"><a href="./termos.html">Termos e Condições</a></li>
             </ul>
           </nav>
         </div>
