--- a/bicicletas.html
+++ b/bicicletas.html
@@ -42,8 +42,8 @@
     <main>
       <div class="titulo-bg">
         <div class="titulo container">
-          <p class="font-2-l-b cor-5">ESCOLHA A MELHOR PARA VOCÊ</p>
-          <h1 class="font-1-xxl cor-0">
+          <p class="font-2-l-b cor-5 fadeInLeft" data-anime="500">ESCOLHA A MELHOR PARA VOCÊ</p>
+          <h1 class="font-1-xxl cor-0 fadeInLeft" data-anime="600">
             nossas bicicletas<span class="cor-p1">.</span>
           </h1>
         </div>
@@ -177,6 +177,7 @@
         </p>
       </div>
     </footer>
+    <script src="./js/plugins/simple-anime.js"></script>
     <script src="./js/script.js"></script>
   </body>
 </html>
