--- a/seguros.html
+++ b/seguros.html
@@ -42,8 +42,8 @@
     <main class="seguros-bg">
       <div class="titulo-bg">
         <div class="titulo container">
-          <p class="font-2-l-b cor-5">Escolha o seguro</p>
-          <h1 class="font-1-xxl cor-0">
+          <p class="font-2-l-b cor-5 fadeInLeft" data-anime="500">Escolha o seguro</p>
+          <h1 class="font-1-xxl cor-0 fadeInLeft" data-anime="600">
             você seguro<span class="cor-p1">.</span>
           </h1>
         </div>
